support renew a certificate
