# api/openapi.yaml
@@ -233,6 +233,45 @@ paths:
       x-codegen-request-body-name: deviceRequests
       x-contentType: application/json
       x-accepts: '*/*'
+  /aas/api/v1/renewable:
+    post:
+      description: 查询指定UDID的设备是否可以免费补签
+      operationId: renewable
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: string
+        description: udid
+        required: true
+      responses:
+        "200":
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/ResponseOfRenewable'
+          description: OK
+        "201":
+          content: {}
+          description: Created
+        "401":
+          content: {}
+          description: Unauthorized
+        "403":
+          content: {}
+          description: Forbidden
+        "404":
+          content: {}
+          description: Not Found
+      security:
+      - Authorization:
+        - global
+      summary: 查询设备是否可以补签
+      tags:
+      - device
+      x-codegen-request-body-name: udid
+      x-contentType: application/json
+      x-accepts: '*/*'
   /aas/api/v1/status:
     post:
       description: 获取证书支持类型
@@ -544,6 +583,9 @@ components:
     DeviceRequest:
       example:
         code: code
+        uuid: uuid
+        version: version
+        quality: 0
         system: system
         param: param
         phone: phone
@@ -552,9 +594,8 @@ components:
         reserve: true
         callback: callback
         model: model
+        renew: true
         udid: udid
-        version: version
-        quality: 0
       properties:
         callback:
           description: 预定证书激活时可通过回调地址将证书推送到业务系统中，为空将不会回调
@@ -581,6 +622,9 @@ components:
         refer:
           description: 下游系统可以标记该设备的注册用户，上游系统将透传回去，非必要参数
           type: string
+        renew:
+          description: 标记该设备是否是免费补签请求
+          type: boolean
         reserve:
           description: 证书预定参数开关如果卡设备，将在设备处于激活状态时通知用户安装
           type: boolean
@@ -589,6 +633,9 @@ components:
           type: string
         udid:
           description: iOS或iPad设备UDID
+          type: string
+        uuid:
+          description: 免费补签时，指定需要补签证书对应的UUID
           type: string
         version:
           description: 兑换设备的客户端版本，非必要参数
@@ -725,6 +772,20 @@ components:
           description: 证书是否有效
           type: boolean
       title: PersonalCertificate
+      type: object
+    Renewable:
+      example:
+        renewable: true
+        udid: udid
+        uuid: uuid
+      properties:
+        renewable:
+          type: boolean
+        udid:
+          type: string
+        uuid:
+          type: string
+      title: Renewable
       type: object
     ResponseOfBalance:
       example:
@@ -1646,6 +1707,213 @@ components:
       required:
       - code
       title: ResponseOfPersonalCertificate
+      type: object
+    ResponseOfRenewable:
+      example:
+        msg: msg
+        result:
+          type: type
+        ciphertext: ciphertext
+        code: 0
+        data:
+          renewable: true
+          udid: udid
+          uuid: uuid
+        session: session
+        success: true
+        action: GET_AES_KEY
+        error: ACCEPTED
+        algorithm: algorithm
+      properties:
+        action:
+          enum:
+          - GET_AES_KEY
+          - NONE
+          - REFRESH_SERVER_PUBLIC_KEY
+          - RETRY_LATER
+          - RE_LOGIN
+          - UPDATE_CLIENT_VERSION
+          - UPLOAD_CLIENT_PUBLIC_KEY
+          type: string
+        algorithm:
+          type: string
+        ciphertext:
+          type: string
+        code:
+          description: 响应代码
+          format: int32
+          type: integer
+        data:
+          $ref: '#/components/schemas/Renewable'
+        error:
+          enum:
+          - ACCEPTED
+          - ACCESS_RATE_LIMIT
+          - ACCOUNT_CANCELLED
+          - ACCOUNT_DISABLED
+          - ACCOUNT_LOCKED
+          - ACCOUNT_NOT_ACTIVATED
+          - AES_DECRYPTED_DATA_EMPTY
+          - AES_DECRYPT_FAILED
+          - AES_ENCRYPTED_DATA_EMPTY
+          - AES_ENCRYPT_FAILED
+          - AES_KEY_EXPIRED
+          - AES_KEY_EXPIRING_SOON
+          - AES_KEY_FORMAT_ERROR
+          - AES_KEY_GENERATE_FAILED
+          - AES_KEY_LENGTH_ERROR
+          - AES_KEY_NOT_FOUND
+          - AES_MODE_NOT_SUPPORTED
+          - AES_PADDING_NOT_SUPPORTED
+          - AES_VECTOR_FORMAT_ERROR
+          - AES_VECTOR_LENGTH_ERROR
+          - ALREADY_REPORTED
+          - BAD_GATEWAY
+          - BAD_REQUEST
+          - BUSINESS_ERROR
+          - CAPTCHA_ERROR
+          - CAPTCHA_EXPIRED
+          - CONFLICT
+          - CONTINUE
+          - CREATED
+          - DATABASE_BACKUP_FAILED
+          - DATABASE_CHECK_CONSTRAINT_VIOLATION
+          - DATABASE_COLUMN_NOT_FOUND
+          - DATABASE_CONNECTION_FAILED
+          - DATABASE_CONNECTION_POOL_EXHAUSTED
+          - DATABASE_DEADLOCK
+          - DATABASE_DELETE_FAILED
+          - DATABASE_DUPLICATE_KEY
+          - DATABASE_FOREIGN_KEY_VIOLATION
+          - DATABASE_INDEX_NOT_FOUND
+          - DATABASE_INSERT_FAILED
+          - DATABASE_NOT_NULL_VIOLATION
+          - DATABASE_OPERATION_FAILED
+          - DATABASE_PERMISSION_DENIED
+          - DATABASE_QUERY_FAILED
+          - DATABASE_READ_ONLY
+          - DATABASE_RESTORE_FAILED
+          - DATABASE_SQL_SYNTAX_ERROR
+          - DATABASE_TABLE_NOT_FOUND
+          - DATABASE_TIMEOUT
+          - DATABASE_TRANSACTION_FAILED
+          - DATABASE_UNIQUE_CONSTRAINT_VIOLATION
+          - DATABASE_UPDATE_FAILED
+          - DATABASE_VERSION_INCOMPATIBLE
+          - DATA_ALREADY_EXISTS
+          - DATA_CONSTRAINT_VIOLATION
+          - DATA_FORMAT_ERROR
+          - DATA_INTEGRITY_ERROR
+          - DATA_NOT_FOUND
+          - DATA_RANGE_ERROR
+          - DATA_RELATION_ERROR
+          - DATA_STATUS_ERROR
+          - DATA_VERSION_CONFLICT
+          - EARLY_HINTS
+          - EXPECTATION_FAILED
+          - FAILED_DEPENDENCY
+          - FEATURE_NOT_AVAILABLE
+          - FORBIDDEN
+          - FORCE_ENCRYPT_REQUEST_REQUIRED
+          - FORCE_ENCRYPT_SESSION_REQUIRED
+          - FOUND
+          - GATEWAY_TIMEOUT
+          - GONE
+          - HTTP_VERSION_NOT_SUPPORTED
+          - IM_USED
+          - INSUFFICIENT_STORAGE
+          - INTERNAL_SERVER_ERROR
+          - IP_FORBIDDEN
+          - LENGTH_REQUIRED
+          - LOCKED
+          - LOGIN_EXPIRED
+          - LOGIN_FAILED
+          - LOOP_DETECTED
+          - METHOD_NOT_ALLOWED
+          - MOVED_PERMANENTLY
+          - MULTIPLE_CHOICES
+          - MULTI_STATUS
+          - NETWORK_AUTHENTICATION_REQUIRED
+          - NON_AUTHORITATIVE_INFORMATION
+          - NOT_ACCEPTABLE
+          - NOT_EXTENDED
+          - NOT_FOUND
+          - NOT_IMPLEMENTED
+          - NOT_MODIFIED
+          - NO_CONTENT
+          - OK
+          - OPERATION_NOT_ALLOWED
+          - OPERATION_TIMEOUT
+          - PARTIAL_CONTENT
+          - PASSWORD_EXPIRED
+          - PASSWORD_WEAK
+          - PAYLOAD_TOO_LARGE
+          - PAYMENT_REQUIRED
+          - PERMANENT_REDIRECT
+          - PERMISSION_DENIED
+          - PRECONDITION_FAILED
+          - PRECONDITION_REQUIRED
+          - PROCESSING
+          - PROXY_AUTHENTICATION_REQUIRED
+          - RANGE_NOT_SATISFIABLE
+          - REFRESH_TOKEN_EXPIRED
+          - REFRESH_TOKEN_INVALID
+          - REQUEST_HEADER_FIELDS_TOO_LARGE
+          - REQUEST_TIMEOUT
+          - RESET_CONTENT
+          - RESOURCE_LOCKED
+          - RSA_CLIENT_PUBLIC_KEY_EXPIRING_SOON
+          - RSA_CLIENT_PUBLIC_KEY_NOT_FOUND
+          - RSA_DECRYPT_FAILED
+          - RSA_ENCRYPT_FAILED
+          - RSA_KEY_FORMAT_ERROR
+          - RSA_KEY_GENERATE_FAILED
+          - RSA_KEY_LENGTH_ERROR
+          - RSA_KEY_PAIR_EXPIRING_SOON
+          - RSA_KEY_PAIR_MISMATCH
+          - RSA_KEY_PAIR_NOT_FOUND
+          - RSA_PRIVATE_KEY_NOT_FOUND
+          - RSA_PRIVATE_KEY_PARSE_ERROR
+          - RSA_PUBLIC_KEY_PARSE_ERROR
+          - RSA_SESSION_INVALID
+          - RSA_SESSION_REQUIRED
+          - SEE_OTHER
+          - SERVICE_UNAVAILABLE
+          - SESSION_EXPIRED
+          - SESSION_INVALID
+          - SUCCESS
+          - SWITCHING_PROTOCOLS
+          - SYSTEM_MAINTENANCE
+          - TEMPORARY_REDIRECT
+          - THIRD_PARTY_LOGIN_FAILED
+          - TOKEN_EXPIRED
+          - TOKEN_INVALID
+          - TOO_EARLY
+          - TOO_MANY_REQUESTS
+          - UNAUTHORIZED
+          - UNAVAILABLE_FOR_LEGAL_REASONS
+          - UNKNOWN_ERROR
+          - UNPROCESSABLE_ENTITY
+          - UNSUPPORTED_MEDIA_TYPE
+          - UPGRADE_REQUIRED
+          - URI_TOO_LONG
+          - USER_NOT_LOGIN
+          - USE_PROXY
+          - VARIANT_ALSO_NEGOTIATES
+          - VERSION_INCOMPATIBLE
+          type: string
+        msg:
+          description: 错误信息:成功时为空或为success
+          type: string
+        result:
+          $ref: '#/components/schemas/Result'
+        session:
+          type: string
+        success:
+          type: boolean
+      required:
+      - code
+      title: ResponseOfRenewable
       type: object
     ResponseOfStatus:
       example:
